--- a/cart.html
+++ b/cart.html
@@ -336,5 +336,7 @@
 <script src="js/data.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/jquery-ui.js"></script>
+<script src="./js/common.js"></script>
+<script src="js/kits.js"></script>
 <script src="js/cart.js"></script>
 </html>
