--- a/detail.html
+++ b/detail.html
@@ -565,5 +565,7 @@
 </body>
 <script src="js/data.js"></script>
 <script src="js/jquery.js"></script>
+<script src="./js/common.js"></script>
+<script src="js/kits.js"></script>
 <script src="js/detail.js"></script>
 </html>
